--- a/EVENT.IN/daftareo.html
+++ b/EVENT.IN/daftareo.html
@@ -129,38 +129,33 @@
             </div>
         </div> 
     </section>
-    <footer class="page-footer font-small pt-5 px-5">
+    <section class="page-footer font-small pt-5 px-5">
         <div class="container text-center text-md-left">
-            <div class="row">
-                <div class="col-md-6 mt-md-0 mt-3">
-                    <h5 class="text-uppercase">Footer Content</h5>
-                    <p>Here you can use rows and columns to organize your footer content.</p>
+            <div class="row text-center">
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <h5 class="text-uppercase">Social Media</h5>
+                    <p> eventin@email.com<br>
+                        @eventin
+                    </p>
+                    <i class="fas fa-envelope"></i>   <i class="fab fa-instagram"></i>
+                </div>
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <h5 class="text-uppercase">Address</h5>
+                    <p>Jl. Mayjen Sutoyo<br>Kelurahan Kelandasan Ilir</p>
+                    <i class="far fa-map"></i>
+                </div>
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <h5 class="text-uppercase">Hotline</h5>
+                    <p>081234567890</p>
+                    <i class="fas fa-phone"></i>
                 </div>
                 <hr class="clearfix w-100 d-md-none pb-3">
-                <div class="col-md-3 mb-md-0 mb-3">
-                    <h5 class="text-uppercase">Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#!">Link 1</a></li>
-                        <li><a href="#!">Link 2</a></li>
-                        <li><a href="#!">Link 3</a></li>
-                        <li><a href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 mb-md-0 mb-3">
-                    <h5 class="text-uppercase">Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#!">Link 1</a></li>
-                        <li><a href="#!">Link 2</a></li>
-                        <li><a href="#!">Link 3</a></li>
-                        <li><a href="#!">Link 4</a></li>
-                    </ul>
-                </div>
             </div>
         </div>
         <div class="footer-copyright text-center py-3">
-            © 2020 Copyright: EVENT.IN
+            © 2020 Copyright : EVENT.IN
         </div>
-    </footer>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
