--- a/EVENT.IN/detailedit.html
+++ b/EVENT.IN/detailedit.html
@@ -39,21 +39,9 @@
                 <img src="img/logo.jpg" alt="">
             </div>
             <div class="container konten p-5 my-4">
+                <a class="btn btn-primary" href="formeo.html" role="button">Edit</a><br>
                 <h1 class="text-center mb-4">Tentang Event Organizer</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate corporis explicabo minus temporibus distinctio voluptatem, exercitationem, accusamus commodi expedita consectetur alias ea quo animi voluptates rerum odit aliquam sit quod vitae veniam. Doloribus, aspernatur dolore? Obcaecati sapiente culpa aperiam itaque aliquam, quae ex pariatur autem eos animi qui, delectus nesciunt reprehenderit laudantium id repellendus aspernatur exercitationem accusantium ullam! Molestias accusamus nihil magnam animi pariatur voluptatem expedita, beatae aspernatur atque quas accusantium exercitationem, quis laudantium delectus similique voluptatum sequi quia tenetur voluptate sit qui rerum quidem! Nesciunt fugit, sint error ullam amet incidunt quae debitis eveniet quibusdam rem, quasi unde iure. Optio nam, adipisci non ullam itaque molestias vitae impedit exercitationem perspiciatis sed ipsum natus, error ad incidunt enim, rem quaerat. Fugiat itaque a sapiente ipsam deserunt quas? Corrupti, voluptatem similique. Quas temporibus velit quasi beatae unde, facere, optio, aperiam est nostrum accusamus exercitationem impedit sit. Neque magnam expedita sed pariatur!</p>
-                <h3 class="text-center">Rate</h3>
-                <div class="container star-rating">
-                    <input type="radio" id="5-stars" name="rating" value="5" />
-                    <label for="5-stars" class="star">&#9733;</label>
-                    <input type="radio" id="4-stars" name="rating" value="4" />
-                    <label for="4-stars" class="star">&#9733;</label>
-                    <input type="radio" id="3-stars" name="rating" value="3" />
-                    <label for="3-stars" class="star">&#9733;</label>
-                    <input type="radio" id="2-stars" name="rating" value="2" />
-                    <label for="2-stars" class="star">&#9733;</label>
-                    <input type="radio" id="1-star" name="rating" value="1" />
-                    <label for="1-star" class="star">&#9733;</label>
-                </div>
             </div>
             <div class="container konten p-5 my-4">
                 <h1 class="text-center mb-4">Project Terdahulu</h1>
@@ -106,15 +94,6 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="comment">Comment:</label>
-                            <textarea class="form-control" rows="3" id="comment"></textarea>
-                            <button type="button" class="btn btn-primary">Comment</button>
                         </div>
                     </div>
                 </div>
