--- a/EVENT.IN/formeo.html
+++ b/EVENT.IN/formeo.html
@@ -28,18 +28,45 @@
             <div class="form-row">
               <div class="col-md mb-3">
                 <label for="validationDefault02">Tentang Event Organizer Anda</label>
-                <textarea class="form-control" id="validationDefault02" rows="2" required></textarea>
+                <textarea class="form-control" id="validationDefault02" rows="1" required></textarea>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md mb-3 ml-4">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck1">
+                <label class="form-check-label mr-5" for="invalidCheck1">Pernikahan</label>
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2">
+                <label class="form-check-label mr-5" for="invalidCheck2">Konser</label>
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3">
+                <label class="form-check-label mr-5" for="invalidCheck3">Pesta</label>
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck4">
+                <label class="form-check-label mr-5" for="invalidCheck4">Pertandingan</label>
               </div>
             </div>
             <div class="form-row">
                 <div class="col-md-9 mb-3">
                   <label for="validationDefault03">Project Terdahulu</label>
-                  <textarea class="form-control" id="validationDefault03" rows="3"></textarea>
+                  <textarea class="form-control" id="validationDefault03" rows="1"></textarea>
                 </div>
                 <div class="col-md-3 mb-3">
                   <label for="validationDefault04">Foto Kegiatan</label>
                   <input type="file" class="form-control" id="validationDefault04" value="">
                 </div>
+            </div><div class="form-row">
+              <div class="col-md-9 mb-3">
+                <textarea class="form-control" id="validationDefault05" rows="1"></textarea>
+              </div>
+              <div class="col-md-3 mb-3">
+                <input type="file" class="form-control" id="validationDefault06" value="">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-9 mb-3">
+                <textarea class="form-control" id="validationDefault07" rows="1"></textarea>
+              </div>
+              <div class="col-md-3 mb-3">
+                <input type="file" class="form-control" id="validationDefault08" value="">
+              </div>
             </div>
             <button class="btn btn-primary" type="submit">Ubah Detail</button>
           </form>
