--- a/EVENT.IN/index.html
+++ b/EVENT.IN/index.html
@@ -75,19 +75,19 @@
                   <div class="carousel-item active">
                     <blockquote class="blockquote text-center">
                         <p class="mb-0">EVENT.IN sangat membantu kami untuk bertemu dengan konsumen, dan memperbesar peluang kami meraup profit.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                        <footer class="blockquote-footer">Olivia Event Organizer</footer>
                     </blockquote>
                   </div>
                   <div class="carousel-item">
                     <blockquote class="blockquote text-center">
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                        <p class="mb-0">Ini sangat hebat! Konsumen Kami meningkat dan Kami dapat mengembangkan Event Organizer Kami dengan melihat feedback konsumen.</p>
+                        <footer class="blockquote-footer">Bobby Event Organizer</footer>
                     </blockquote>
                   </div>
                   <div class="carousel-item">
                     <blockquote class="blockquote text-center">
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                        <p class="mb-0">EVENT.IN menguntungkan Kami dan Konsumen.</p>
+                        <footer class="blockquote-footer">Adil Event Organizer</footer>
                     </blockquote>
                   </div>
                 </div>              
