--- a/EVENT.IN/formeo.html
+++ b/EVENT.IN/formeo.html
@@ -68,7 +68,7 @@
                 <input type="file" class="form-control" id="validationDefault08" value="">
               </div>
             </div>
-            <button class="btn btn-primary" type="submit">Ubah Detail</button>
+            <button class="btn btn-primary" type="submit">Simpan</button>
           </form>
     </div>
 </body>
